--- a/parcel_shipping_courier/web/index.html
+++ b/parcel_shipping_courier/web/index.html
@@ -25,7 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="parcel_shipping_courier">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_QPDL1frNTwdEm3tTNQVr_jXtctyN3Es"></script>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
